fix(horizontalScroller) nav z-index

--- a/src/scss/component/horizontalScroller/index.scss
+++ b/src/scss/component/horizontalScroller/index.scss
@@ -64,7 +64,7 @@
         padding: 0;
         list-style-type: none;
         font-size: 0;
-        z-index: 12;
+        z-index: 9;
         opacity: 0;
         transition: opacity 0.15s;
         transform: translateY(-100%);
